[package]
name = "sfutils"
version = "1.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
serde_json = "1.0"
phf = { version = "0.11.1", features = ["macros"]}
uuid = { version = "1.3.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
rust-crypto = "^0.2"
regex = "1.6"
dateparser = "0.2.0"
clap = "4.2.7"
colored = "2.0.0"
directories = "5.0.1"
toml = "0.7.3"
